[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Mesh/Red.material" type="Material" id=1]
[ext_resource path="res://assets/Mesh/Blue.material" type="Material" id=2]
[ext_resource path="res://assets/Mesh/Base Enemy.gd" type="Script" id=3]
[ext_resource path="res://Healthbar3D.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CapsuleShape" id=2]
height = 2.33883

[sub_resource type="CylinderShape" id=3]
radius = 21.0492
height = 9.4591

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1.48176, 1, 1.89931 )

[node name="Base Enemy" type="KinematicBody"]
transform = Transform( -3, 0, -2.62268e-07, 0, 3, 0, 2.62268e-07, 0, -3, 0.0304394, 0, 0.00311279 )
script = ExtResource( 3 )

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.473232, 0, 0, -1.33614e-22, 0.473232, 0, 0, 0, 0.473232, 0, 1.82806, 0 )

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( -1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="Eye" type="MeshInstance" parent="Body"]
transform = Transform( -1.80258e-08, 1.80258e-08, -0.412383, -1.57702e-08, 0.412383, 1.80258e-08, 0.36078, 1.80258e-08, -1.57702e-08, 0, -0.740174, 0.754971 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="Eye2" type="MeshInstance" parent="Body"]
transform = Transform( -1.80258e-08, 1.80258e-08, -0.412383, -3.68929e-08, 0.520711, 2.2761e-08, 0.844012, 2.2761e-08, -3.68929e-08, 0, 0.910821, -0.0849035 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="Leg" type="MeshInstance" parent="Body"]
transform = Transform( -1.00475e-08, 1.00475e-08, -0.22986, -3.47683e-08, 0.356248, 1.55721e-08, 0.795405, 1.55721e-08, -3.47683e-08, -0.551303, 0.0269977, -1.25726 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="Leg2" type="MeshInstance" parent="Body"]
transform = Transform( -1.00475e-08, 1.00475e-08, -0.22986, -3.47683e-08, 0.356248, 1.55721e-08, 0.795405, 1.55721e-08, -3.47683e-08, 0.554579, 0.0209199, -1.25083 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Sight" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Sight"]
shape = SubResource( 3 )

[node name="Attack" type="Area" parent="."]
transform = Transform( 1, 0, 1.42109e-14, 0, 1, 0, -1.42109e-14, 0, 1, 1.68569e-07, 0, -1.93187 )

[node name="CollisionShape" type="CollisionShape" parent="Attack"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0444756, 0.0350666, 0.590517 )
shape = SubResource( 4 )

[node name="Attack2" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_entered" from="Attack" to="." method="_on_Attack_body_entered"]
[connection signal="timeout" from="Attack2" to="." method="_on_Attack2_timeout"]
